[gd_scene load_steps=5 format=3 uid="uid://brw2nd1ekpwdt"]

[ext_resource type="Script" path="res://scripts/OptionsMenu.gd" id="1_783ex"]
[ext_resource type="Texture2D" uid="uid://dxg765bgqtn8a" path="res://Assets/Sprites/UISprites/Checkbox.png" id="2_vodqk"]
[ext_resource type="Texture2D" uid="uid://18h1rvi5pmjr" path="res://Assets/Sprites/UISprites/CheckButtonToggled.png" id="3_sae68"]
[ext_resource type="FontFile" uid="uid://ddl4w61y7kd01" path="res://Assets/Fonts/m3x6.ttf" id="4_ckvc2"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_783ex")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 327.0
offset_bottom = 291.0
color = Color(0.340339, 0.340339, 0.340339, 0.564706)

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 69.0
offset_right = 294.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "SAVE"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 69.0
offset_right = 148.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="NewSaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 115.0
offset_right = 148.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "NEW SAVE"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 115.0
offset_right = 294.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "LOAD"

[node name="BorderlessButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 187.0
offset_right = 107.0
offset_bottom = 219.0
toggle_mode = true
texture_normal = ExtResource("2_vodqk")
texture_pressed = ExtResource("3_sae68")

[node name="BorderlessButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 250.0
offset_right = 107.0
offset_bottom = 282.0
toggle_mode = true
texture_normal = ExtResource("2_vodqk")
texture_pressed = ExtResource("3_sae68")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 159.0
offset_right = 131.0
offset_bottom = 185.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "Borderless"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 7.0
offset_right = 208.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "Game Speed"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 8.0
offset_right = 118.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "Faster"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 260.0
offset_right = 173.0
offset_bottom = 286.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "SFX"

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 231.0
offset_right = 176.0
offset_bottom = 257.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "Music"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 7.0
offset_right = 344.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "Slower"

[node name="FitWindowButton" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 179.0
offset_right = 294.0
offset_bottom = 222.0
theme_override_fonts/font = ExtResource("4_ckvc2")
theme_override_font_sizes/font_size = 32
text = "Fit Screen"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 42.0
offset_right = 294.0
offset_bottom = 58.0
min_value = 1.0
max_value = 101.0
step = 10.0
value = 11.0
scrollable = false
ticks_on_borders = true

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 240.0
offset_right = 296.0
offset_bottom = 256.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFXSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 269.0
offset_right = 296.0
offset_bottom = 285.0
max_value = 1.0
step = 0.01
value = 0.5

[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="NewSaveButton" to="." method="_on_new_save_button_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="BorderlessButton" to="." method="_on_borderless_button_pressed"]
[connection signal="pressed" from="BorderlessButton2" to="." method="_on_borderless_button_pressed"]
[connection signal="pressed" from="FitWindowButton" to="." method="_on_fit_window_button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_sfx_slider_value_changed"]
